--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,12 @@
-<html>
-    <head>
-        <title>といれにっき</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">といれにっき</a></h1>
-        </div>
+<div>
+    <h1><a href="/">といれにっき</a></h1>
+</div>
 
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">初めてのとうこうんち</a></h2>
-            <p>こんにちは！ よろしくお願いしますんち！ </p>
-        </div>
-
-        <div>
-            <p>公開日: 2014/06/14, 12:14</p>
-            <h2><a href="">2番目の投稿</a></h2>
-            <p> こんにちは！ よろしくお願いしますんち！ </p>
-        </div>
-    </body>
-</html>
+{% for post in posts %}
+    <div>
+        <p>公開日時: {{ post.published_date }}</p>
+        <h2><a href="">{{ post.title }}</a></h2>
+        <p>{{ post.text|linebreaksbr }}</p>
+        <br>
+    </div>
+{% endfor %}
